Refactor and enhance code quality across multiple classes
- Updated constants for better readability and maintainability in IndexContextLoggingAdapter, KeyToSegmentMapSynchronizedAdapter, and ConsoleBackendClient.
- Simplified exception handling and logging in ConsoleBackendClient to improve clarity and reduce redundancy.
- Refactored awaitTermination logic in IndexExecutorRegistry for better readability.
- Improved type safety in SegmentDeltaCacheControllerTest, SegmentDeltaCacheWriterTest, SegmentFullWriterTest, and others by changing SegmentResources type parameters.
- Enhanced error handling in ManagementAgentServer with consistent error messages and improved parameter handling.
- Updated HTML templates for better structure and readability.
- General code cleanup and formatting improvements across various classes.